05/16/2004  version 0.1.75  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed many bugs in the DefaultViewTreeModel, DefaultViewTree,
      DefaultViewTreeNode, and AdapterNode
    * Added code to remember the expanded states of nodes after they are
      dragged and dropped into other nodes

05/15/2004  version 0.1.74  Ian Lewis <IanLewis@member.fsf.org>

    * Added xsd files to the file filters when opening a document.

05/14/2004  version 0.1.73  Ian Lewis <IanLewis@member.fsf.org>

    * Updated the DOMSerializer to implement the newest version
      of the LSSerializer interface. jsXe requires Xerces 2.6.2.
    * Updated how the splitpane locations are set up. The look better now and
      and set themselves to a percentage of the window size as a starting
      value.

05/13/2004  version 0.1.72  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in the displaying of nodes in the tree. The algorithm
      That desides if a node is to be displayed caused null pointer exceptions
      to be thrown.
    * Fixed various bugs. Moved logic for opening save dialogs to the
      DocumentBuffer class.
    * Fixed a bug in the inserting of nodes in the DefaultViewTreeNode class
      The setParent method wasn't setting the correct parent.

05/07/2004  version 0.1.71  Ian Lewis <IanLewis@member.fsf.org>

    * Added a layer between the AdapterNode and the GUI. The DefaultViewTreeNode
      class contains properties for use with the GUI. AdapterNode now doesn't
      any GUI specific code in it.

04/23/2004  version 0.1.70  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed some syncing problems with the XMLDocument and client classes
      when the serialization process changes the structure of the document
      by splitting cdata-section nodes.
    * Fixed a bug that caused IndexOutOfBoundsExceptions to be thrown when
      writing a document over 5120 bytes.
    * Fixed a bug in the serializer that caused the root element opening tag