@@ -27,10 +27,10 @@
     <property name="javac.source" value="1.3"/>
 		<property name="javadoc.link" value="http://java.sun.com/j2se/1.3/docs/api/"/>
 		<property name="major.version" value="0"/>
-		<property name="minor.version" value="1"/>
-		<property name="build.version" value="75"/>
-		<property name="app.version" value="${major.version}.${minor.version}.${build.version}"/>
-		<property name="app_version" value="${major.version}_${minor.version}_${build.version}"/>
+		<property name="minor.version" value="3"/>
+		<property name="build.description" value=" pre1"/>
+		<property name="app.version" value="${major.version}.${minor.version} ${build.description}"/>
+		<property name="app_version" value="${major.version}_${minor.version}${build.description}"/>
 		<property name="distbin.dir" value="${build.dir}/${app.name}-${app_version}-bin"/>
 		<property name="distsrc.dir" value="${build.dir}/${app.name}-${app_version}-src"/>
 		<path id="classpath">
@@ -103,7 +103,7 @@
 			<entry key="build.time" pattern="dd/MM/yyyy HH:mm" type="date" value="now"/>
 			<entry key="major.version" value="${major.version}"/>
 			<entry key="minor.version" value="${minor.version}"/>
-			<entry key="build.version" value="${build.version}"/>
+			<entry key="build.description" value="${build.description}"/>
 		</propertyfile>
 		<jar jarfile="${app.name}.jar" manifest="${app.name}.manifest">
 			<fileset dir="${build.dest}">
